# rust-paediatric-nutrition-advice

./: Cargo.toml  Makefile  README.md  main.rs
backend/: Cargo.toml
backend/src/: db_init.sql  docker-compose.yml  main.rs  schema.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
